# wildrobot

./: .env  .gitignore  AGENTS.md  CLAUDE.md  MUJOCO_LOG.TXT  README.md  WILDROBOT_PROJECT_STRUCTURE.md  mujoco_playground_plan.md  phase3_rl_training_plan.md  pyproject.toml  requirements.txt  setup_wildrobot_structure.sh  wr_diag.txt
amp/: PHASE1_REBASE_STRATEGY.md  TRAINING_PLAN.md  __init__.py  baseline.yaml  human_like_walking_strategy.md  monitor_training.py  phase0_foundation.yaml  phase1_contact.yaml  phase1_contact_rebase_step1_baseline.yaml  phase1_contact_rebase_step2_alternation_metrics.yaml  phase1_contact_rebase_step3_gentle_contact_warmstart.yaml  scp_from_remote.sh  scp_to_remote.sh  train.py  verify_metrics.py  verify_quick_test.py  walk.py  walk_env.py
assets/: __init__.py  compare_collision_options.py  config.json  derive_residual_scales.py  derive_walk_ready_home.py  keyframes.xml  post_process.py  render_models.py  reorder_actuators.py  resettle_keyframes.py  robot_config.py  robot_config.yaml  robot_schema.json  scene_flat_terrain.xml  scene_rough_terrain.xml  sensors.xml  update_xml.sh  validate_model.py  wildrobot.urdf  wildrobot.xml
common/: base_env.py  check_training.py  video_renderer.py
configs/: smplx_to_wildrobot.json  smplx_to_wildrobot_computed.json  smplx_to_wildrobot_test_pelvis.json
control/: README.md  __init__.py  realism_profile.py
data/: walking_motions.pkl  walking_motions_features.npy
docs/: README.md  URDF_migration_plan.md  amp_brax_solution.md  brax_integration_proposal.md  e2e_training_to_sim2real.md  jax_integration_roadmap.md  joints_angle.md  learn_first_plan.md  phase3_task6_acceptance_run_20251215T063231Z.json  phase3_task6_failure_traces_20251215T063312Z.json  section_3_1_2_status.md  session_summary_task10_task11.md  session_summary_task10_task8_complete.md  sim2real_policy_contract.md  system_architecture.md  task10_phase2_progress.md  task5_amp_integration_progress.md  task5_phase2_integration_status.md  task9_diagnostics_report.md  termination_fix_summary.md  training_script_consolidation_summary.md  training_scripts_comparison.md
isaac/: isaac_lab_strategy.md
models/: README.md
playground/: CONFIGURABLE_VALIDATION.md  GPU_MEMORY_CONFIG.md  HEADLESS_RENDERING.md  OBSERVATION_NORMALIZATION_EXPLAINED.md  REWARD_COMPARISON.md  VALIDATION_USAGE.md  VIDEO_RENDERING_FIX.md  VISUALIZATION_CONSISTENCY_VALIDATION.md  WANDB_LOGGING_FIX.md  default.yaml  production.yaml  quick.yaml  scp_from_remote.sh  scp_to_remote.sh  train.py  visualize_policy.py
playground_amp/: CHANGELOG.md  TRAINING_README.md  brax_wrapper.py  export_onnx.py  train.py  (+8 more)
runtime/: README.md  pyproject.toml  requirements-dev.txt
runtime/bundles/standing_push_v0.13.9_ckpt310/: checksums.json  policy.onnx  policy_spec.json  ppo_standing_push_v0139.yaml  wildrobot_config.json
runtime/bundles/standing_push_v0.14.6_ckpt250/: checksums.json  mujoco_robot_config.json  policy.onnx  policy_spec.json  training_config.yaml  wildrobot.xml  wildrobot_config.json
runtime/bundles/standing_push_v01304/: checksums.json  policy_spec.json  robot_config.yaml  wildrobot.xml
runtime/bundles/walking_v0210_smoke6_ckpt1650/: checksums.json  mujoco_robot_config.json  policy.onnx  policy_spec.json  runtime_policy_config.json  wildrobot.xml  wildrobot_config.json
runtime/config/: config.py
runtime/configs/: __init__.py  config.py  example_config.json  runtime_config_template.json  runtime_config_v2.json  walking_v0194.json  walking_v0195.json  wildrobot_config.example.json  wr_runtime_config.json
runtime/control/: __init__.py  run_policy.py
runtime/docs/: bno08x_rpi_install_and_test.md  footswitch_integration.md  hiwonder_servo_controller_uart.md  runtime_io_design.doc  servo_api.md  servo_calibration_design.md
runtime/hardware/: __init__.py  bno085.py  hiwonder_actuators.py
runtime/scripts/: calibrate.py  probe_bno085.py  probe_bno085_spi_raw.py  probe_hiwonder_debugboard.py  probe_hiwonder_ttl_bus.py  probe_hiwonder_ttl_timing.py  setup_hiwonder_ttl_servo.py  test_hiwonder_board.py
runtime/utils/: __init__.py
runtime/validation/: __init__.py  startup_validator.py
runtime/wildrobot_runtime/: __init__.py
runtime/wildrobot_runtime/control/: __init__.py  run_policy.py
runtime/wr_runtime/: __init__.py  config.py
runtime/wr_runtime/control/: __init__.py  external_actuator_io.py  loc_ref_runtime.py  loc_ref_runtime_v2.py  mock_robot_io.py  policy_runner.py  reference_phase.py  run_policy.py  run_walking.py  runtime_policy_config.py  standing_policy_runner.py
runtime/wr_runtime/hardware/: __init__.py  actuators.py  bno085.py  foot_switches.py  hiwonder_actuators.py  hiwonder_board_controller.py  hiwonder_ttl_bus.py  imu.py  robot_io.py  servo_io_worker.py  ttl_servo_controller.py
runtime/wr_runtime/inference/: __init__.py  onnx_policy.py
runtime/wr_runtime/io/: __init__.py  hardware_io.py
runtime/wr_runtime/logging/: __init__.py  locomotion_log_schema.py
runtime/wr_runtime/scripts/: check_pose.py
runtime/wr_runtime/utils/: frames.py  mjcf.py
runtime/wr_runtime/validation/: __init__.py  inspect_log.py  realism_profile.py  replay_policy.py  startup_validator.py  validate_bundle.py
(+1887 files in other folders)
