[project]
name = "wildrobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brax>=0.13.0",
    "jax>=0.8.1; sys_platform == 'darwin'",
    "jax[cuda13]>=0.8.1; sys_platform != 'darwin'",
    "mediapy>=1.2.4",
    "mujoco[mjpython]>=3.3.7",
    "numpy>=2.3.5",
    "onnx>=1.16.0",
    "onnxruntime>=1.16.0",
    "onshape-to-robot>=1.7.9",
    "playground",
    "pymeshlab>=2025.7",
    "pyserial>=3.5",
    "wandb>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
