[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wildrobot-runtime"
version = "0.1.0"
description = "Hardware runtime for WildRobot (Raspberry Ubuntu)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "onnxruntime>=1.16",
  "pyserial>=3.5",
  "adafruit-blinka>=8.0.0",
  "adafruit-circuitpython-bno08x",
  # rpi-gpio only builds on Linux (needs <sys/epoll.h>); gate it so the
  # runtime package installs + validates on macOS dev machines.  Mirrors
  # the root pyproject.toml marker.  The hardware runner imports GPIO lazily,
  # so non-Linux installs can still export/validate/dry-run bundles.
  "rpi-gpio>=0.7.1; sys_platform == 'linux'",
  "pyyaml>=6.0",
]

[project.scripts]
# v0.21.0: ``wildrobot-run-policy`` re-added with the v3-aligned (home-base
# residual, wr_obs_v8_cmd3d) hardware policy runner.  ``wildrobot-replay-policy``
# remains removed (the v1/v2 replay stack was deleted and not reintroduced).
wildrobot-run-policy = "wr_runtime.control.run_policy:main"
wildrobot-validate-bundle = "wr_runtime.validation.validate_bundle:main"
wildrobot-inspect-log = "wr_runtime.validation.inspect_log:main"

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
where = [".", ".."]
include = ["wr_runtime*", "wildrobot_runtime*", "configs*", "policy_contract*"]
